@@ -1,5 +1,11 @@
 2025-08-29  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el: Add ibuffer configuration.
+	(ibuffer-saved-filter-groups): Update value.
+
+
+2025-08-29  Zhengyi Fu  <i@fuzy.me>
+
 	* init.el (+init-fontsets): Set nerd-icons fonts if nerd-icons is
 	loaded.
 
